[package]
name = "rewind-card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightningcss = { version = "1.0.0-alpha.45", features = ["serde" , "browserslist"]}
serde = "1.0.188"
serde_json = "1.0.106"
csv = "1.2.2"
regex = {version = "1.9.5", features=["std"]}

num = "0.4.0"
grass = "0.13.1"
parcel_selectors = "0.26.1"
lazy_static = "1.4.0"
rayon = "1.5.3"

itertools="0.11.0"